--- a/chat/server/Cargo.toml
+++ b/chat/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "server"
 version = "0.1.0"
-authors = ["tensor-programming <abeltensor@tensor-programming.com>"]
+authors = ["Guillaume de Cumont  <guillaumedecumont@gmail.com>"]
 
 [dependencies]
 regex = "1.5"
